TEST_PROGRAMS/INVALID/hardik_vala/noexp_if.min
# Expression-less if-statement.

if then else endif

